# spyks

./: .gitignore  .travis.yml  MANIFEST.in  README  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python_tests.yml
examples/: example_nakl.ipynb
include/spyks/: integrators.h
models/: adex.cpp  adex.yml  biocm.cpp  biocm.yml  biocm_ei.cpp  biocm_ei.yml  model_cpp.templ  nakl.cpp  nakl.yml  passive.cpp  passive.yml  passive_ei.cpp  passive_ei.yml  pospischil.cpp  pospischil.yml  pospischil_sm.yml
spyks/: __init__.py  _version.py  analyze.py  build.py  codegen.py  core.py  make_model.py  models.pyx  pyneurons.py  tools.py  validate.py
spyks/templates/: head.cpp  model_continuous.cpp  model_reset.cpp
src/: Makefile  Untitled.ipynb  cneurons.cpp  cneurons.hpp  cneurons_old.cpp  integrators.hpp  neurons.cpp  neurons.hpp  spyks.cpp  spyks.py  test_cneurons.ipynb  utility.hpp
test/: build_models.sh  test_models.py
