[pep8]
ignore=E221,E501,E701

[metadata]
name = spyks
version = attr: spyks.__version__
description = Generate fast c++ code to integrate dynamical neuron models
long_description = spyks is a tool for building and simulating simple, dynamical neuron models. It
    places a strong emphasis on efficient modification of parameters, because it is
    primarily intended for use in data assimilation applications where the goal is
    to estimate parameters and unmeasured states from recorded data. It is very much
    a work in progress.
license = GNU General Public License (GPL)
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Natural Language :: English
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/neurobank

[options]
zip_safe = false
packages = spyks
python_requires = >= 3.5
setup_requires =
    setuptools
install_requires =
    pybind11>=2.2.0
    Pint>=0.7
    ruamel.yaml>=0.13
    sympy>=1.0
    numpy>=1.11
test_suite = tests

[options.entry_points]
console_scripts =
    spykscc = spyks.build:compile_script

[options.package_data]
spyks = templates/*.cpp